--- a/src/main/resources/static/upload.html
+++ b/src/main/resources/static/upload.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>上报</title>
+    <title>日志上报</title>
 </head>
 <body>
 <h2>文件上传</h2>
-    <form action="schedule/reporting" enctype="multipart/form-data" method="post">
+    <form action="taskController/insertMyLog" enctype="multipart/form-data" method="post">
     <table>
         <tr>
             <td>logType类型:</td>
@@ -23,18 +23,18 @@
         <tr>
             <td>operationCardid:</td>
             <td><label>
-                <input type="text" name="operationCardid">
+                <input type="text" name="logCardId">
             </label></td>
         </tr>
         <tr>
             <td>描述:</td>
             <td><label>
-                <input type="text" name="logRemarks">
+                <input type="text" name="fileTagging">
             </label></td>
         </tr>
         <tr>
             <td>请选择文件:</td>
-            <td><input type="file" name="file"></td>
+            <td><input type="file" name="logFile"></td>
         </tr>
         <tr>
             <td><input type="submit" value="上传"></td>
