--- a/src/main/resources/static/insert.html
+++ b/src/main/resources/static/insert.html
@@ -9,21 +9,33 @@
     <form action="taskController/insertNewTask" enctype="multipart/form-data" method="post">
     <table>
         <tr>
-            <td>logType类型:</td>
+            <td>groupId:</td>
             <td><label>
-                <input type="text" name="groupId">
+                <input type="number" name="groupId">
             </label></td>
         </tr>
         <tr>
-            <td>groupId:</td>
+            <td>creatorCardId:</td>
             <td><label>
                 <input type="text" name="creatorCardId">
             </label></td>
         </tr>
         <tr>
-            <td>operationCardid:</td>
+            <td>sheetTitle:</td>
             <td><label>
                 <input type="text" name="sheetTitle">
+            </label></td>
+        </tr>
+        <tr>
+            <td>日期:</td>
+            <td><label>
+                <input type="text" name="taskEndTime">
+            </label></td>
+        </tr>
+        <tr>
+            <td>taskState:</td>
+            <td><label>
+                <input type="number" name="taskState">
             </label></td>
         </tr>
         <tr>
@@ -32,9 +44,20 @@
                 <input type="text" name="sheetDescribe">
             </label></td>
         </tr>
+        <tr>
+            <td>taskType:</td>
+            <td><label>
+                <input type="number" name="taskType">
+            </label></td>
+        </tr>
 		 <tr>
             <td>请选择文件:</td>
             <td><input type="file" name="groupTaskFile"></td>
+        </tr>
+        <tr>
+            <td>关联人:</td>
+            <td><input type="text" name="taskCardIds"></td>
+            <td><input type="text" name="taskCardIds"></td>
         </tr>
         <tr>
             <td><input type="submit" value="上传"></td>
