--- a/src/main/resources/static/update.html
+++ b/src/main/resources/static/update.html
@@ -6,8 +6,14 @@
 </head>
 <body>
 <h2>文件上传</h2>
-    <form action="taskController/insertNewTask" enctype="multipart/form-data" method="post">
+    <form action="taskController/updateTask" enctype="multipart/form-data" method="post">
     <table>
+        <tr>
+            <td>groupId:</td>
+            <td><label>
+                <input type="text" name="groupId">
+            </label></td>
+        </tr>
         <tr>
             <td>creatorCardId:</td>
             <td><label>
@@ -35,16 +41,6 @@
 		 <tr>
             <td>请选择文件:</td>
             <td><input type="file" name="groupTaskFile"></td>
-        </tr>
-        <tr>
-            <td>执行人:</td>
-            <td><input type="text" name="taskCardIds"></td>
-            <td><input type="text" name="taskCardIds"></td>
-        </tr>
-        <tr>
-            <td>抄送人:</td>
-            <td><input type="text" name="taskCopierIds"></td>
-            <td><input type="text" name="taskCopierIds"></td>
         </tr>
         <tr>
             <td><input type="submit" value="上传"></td>
