各种状态添加日志

--- a/src/main/resources/static/update.html
+++ b/src/main/resources/static/update.html
@@ -38,6 +38,12 @@
                 <input type="text" name="taskEndTime">
             </label></td>
         </tr>
+        <tr>
+            <td>是否删除源文件:</td>
+            <td><label>
+                <input type="text" name="state">
+            </label></td>
+        </tr>
 		 <tr>
             <td>请选择文件:</td>
             <td><input type="file" name="groupTaskFile"></td>
